# cnotes

./: ARCHITECTURE.md
server/: .env.example  .gitignore  Cargo.toml  README.md  TESTING.md
server/migrations/: 001_create_notes_table.sql
server/scripts/: setup-integration-tests.py
server/src/: lib.rs  main.rs
server/src/config/: settings.rs
server/src/database/: connection.rs  mod.rs
server/src/handlers/: mod.rs  notes.rs
server/src/models/: mod.rs  note.rs
server/tests/: handlers_integration_tests.rs
